[package]
name = "snes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
better-panic = "0.3.0"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = {version = "0.6.3", features=["capture-spantrace"]}
crossterm = "0.28.1"
env_logger = {version = "0.11.3", features = ["unstable-kv"]}
log = {version = "0.4.21", features = ["release_max_level_info", "kv"]}
num_enum = "0.7.2"
pretty_env_logger = {version = "0.5.0"}
ratatui = { version = "0.29.0", features = ["all-widgets"] }
thiserror = "1.0.61"
tui-input = "*"
